# scar

./: README.md  scar.go
scar-c/: .gitignore  Makefile  meson.build  meson.options
scar-c/cmd/: pax-analyze.c  scar-test-writer.c  scar.c  tar-analyze.c  test.c
scar-c/cmd/scar/: args.h  convert.c  list.c  ls.c  main.c  platform.h  rx.c  rx.h  subcmds.h  subcommands.h  util.c  util.h
scar-c/cmd/scar-cmd/: convert.c  subcommands.h
scar-c/cmd/scar/platform/: posix.c  windows.c
scar-c/cmd/scar/subcmds/: cat.c  convert.c  create.c  extract.c  ls.c  tree.c
scar-c/include/scar/: compression.h  io.h  ioutil.h  meta.h  pax-meta.h  pax-syntax.h  pax.h  scar-reader.h  scar-writer.h  scar.h  types.h  ustar.h  util.h
scar-c/src/: internal-util.h  ioutil.c  meta.c  pax-meta.c  pax-syntax.c  pax.c  scar-reader.c  scar-writer.c
scar-c/src/compression/: common.c  gzip.c  plain.c
scar-c/test/: compression.t.c  ioutil.t.c  main.c  pax-syntax.t.c  test.h
scar-c/test/compression/: gzip.t.c
scar-c/test/ioutil/: block-reader.t.c  mem.t.c
scar-rs/: Cargo.toml  README.md
scar-rs/scar/: Cargo.toml
scar-rs/scar-bin/: Cargo.toml
scar-rs/scar-bin/src/: fnmatch.rs  main.rs
scar-rs/scar-bin/src/platform/: generic.rs  mod.rs  unix.rs
scar-rs/scar/fuzz/: Cargo.toml
scar-rs/scar/fuzz/fuzz_targets/: stat_files.rs
scar-rs/scar/src/: pax.rs  read.rs  util.rs  write.rs
scar-rs/scar/src/compression/: gzip.rs  mod.rs  plain.rs  xz.rs  zstd.rs
scar-rs/src/: lib.rs  main.rs  pax.rs  read.rs  util.rs  write.rs
scar-rs/src/compression/: gzip.rs  mod.rs  plain.rs
scar-rs/src/pax/: mod.rs
scar-rs/src/write/: mod.rs
